examples/avm-res-web-site/0.21.8/submodules/config_appsettings/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# config\_appsettings submodule

This submodule manages the app settings configuration (`Microsoft.Web/sites/config`, name: `appsettings`) for an Azure App Service site.

It can be used independently to configure app settings on an existing site.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

## Resources

The following resources are used by this module:

- [azapi_update_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_app_settings"></a> [app\_settings](#input\_app\_settings)

Description: A map of key-value pairs for App Settings and custom values to assign to the App Service.

Type: `map(string)`

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the App Service site or slot.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_is_slot"></a> [is\_slot](#input\_is\_slot)

Description: Whether the parent resource is a deployment slot. Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: Retry configuration for azapi resources.

Type:

```hcl
object({
    error_message_regex = list(string)
    interval_seconds    = optional(number, 10)
    max_retries         = optional(number, 3)
  })
```

Default:

```json
{
  "error_message_regex": [
    "Cannot modify this site because another operation is in progress"
  ]
}
```

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the config resource.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full resource object.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the config resource.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft's privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
